# dailydatascience

./: .env  .env_template  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
connectors/: postgres-connector.json
notebooks/: house-price-regression.ipynb
src/: Dockerfile  create_data.py  pyproject.toml  train.py
src/consume_data/: Dockerfile  consume_data.py  pyproject.toml
src/create_data/: Dockerfile  create_data.py  pyproject.toml
