[project]
name = "dailydatascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "mlflow-skinny>=2.16.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
    "polars>=1.6.0",
    "pre-commit>=3.8.0",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
